fixed the header to make scrollspy visible - will change later as agreed its a rather large header to have fixed. My vote is to make it slimmer but fixed, small and simple

--- a/app/assets/stylesheets/components/document.scss
+++ b/app/assets/stylesheets/components/document.scss
@@ -1,3 +1,14 @@
+.fixed-document-header {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 1300;
+}
+
+body {
+  padding-top: 260px;
+}
+
 .document-header {
     background: #495258;
     color: white;
